# tdameritrade_rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: accounts_async.rs  accounts_sync.rs  config.rs  create_token.rs  instruments_async.rs  instruments_sync.rs  market_hours_async.rs  market_hours_sync.rs  movers_async.rs  movers_sync.rs  option_chains_async.rs  option_chains_sync.rs  preferences_async.rs  preferences_sync.rs  price_history_async.rs  price_history_sync.rs  quotes_async.rs  quotes_sync.rs  trading_async.rs  trading_sync.rs  transaction_history_async.rs  transaction_history_sync.rs  user_info_async.rs  user_info_sync.rs  watchlist_async.rs  watchlist_sync.rs
src/: builders.rs  error.rs  init.rs  lib.rs  order_templates.rs  token.rs
src/asynchronous/: auth_async.rs  client_async.rs  mod.rs  requests_async.rs
src/output/: accounts.rs  instruments.rs  market_hours.rs  mod.rs  movers.rs  option_chains.rs  preferences.rs  price_history.rs  quotes.rs  trading.rs  transaction_history.rs  user_info.rs  watchlist.rs
src/synchronous/: auth_sync.rs  client_sync.rs  mod.rs  requests_sync.rs
