[package]
name = "tdameritrade_rust"
version = "0.1.5"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lolser9/tdameritrade_rust"
description = "An unofficial rust library for TD Ameritrade's API"
keywords = ["tdameritrade", "trading", "stocks", "finance", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thirtyfour_sync = "0.27.1"
urlencoding = "2.1.2"
itertools = "0.10.4"
derive_builder = "0.11.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
chrono = "0.4.22"
